--- a/style.css
+++ b/style.css
@@ -90,4 +90,4 @@ nav .right i{
     margin-right: 24px;
 }
 
-/*=============================Main=============*/
+/*=============================Main 2=============*/
