--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ nav{
     width: 100%;
     height: 60px;
     display: flex;
+    position: fixed;
     background-color: white; 
 }
 nav .left, .right {
@@ -91,3 +92,25 @@ nav .right i{
 }
 
 /*=============================Main 2=============*/
+#video{
+    width: 60vw;
+    height: 35vw;
+    min-width: 600px;
+    min-height: 340px;
+    height: calc(width+width*0.15);
+    margin: 90px 30px 0px 30px;
+}
+
+.descriptions{
+    width: 600px;
+    margin: 0px 3px 3px 30px;
+}
+.descriptions h3, p{
+    margin:8px 0px 0px 0px;
+    padding: 0px;
+}
+
+.descriptions #viewdate{
+    font-size: 14px;
+    font-weight: 500;
+}
